--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,37 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_diagnostics">
+    app:startDestination="@+id/navigation_diagnostics_menu">
 
     <fragment
-        android:id="@+id/navigation_diagnostics"
-        android:name="com.vsu.eyesdoctorapp.ui.diagnostics.DiagnosticsFragment"
+        android:id="@+id/navigation_diagnostics_menu"
+        android:name="com.vsu.eyesdoctorapp.ui.diagnostics.DiagnosticsMenuFragment"
         android:label="Диагностика"
-        tools:layout="@layout/fragment_diagnostics" />
+        tools:layout="@layout/fragment_diagnostics_menu" />
 
     <fragment
-        android:id="@+id/navigation_exercises"
-        android:name="com.vsu.eyesdoctorapp.ui.exercises.ExercisesFragment"
+        android:id="@+id/navigation_exercises_menu"
+        android:name="com.vsu.eyesdoctorapp.ui.exercises.ExercisesMenuFragment"
         android:label="Упражнения"
-        tools:layout="@layout/fragment_exercises" />
+        tools:layout="@layout/fragment_exercises_menu" />
 
     <fragment
-        android:id="@+id/navigation_recommendations"
-        android:name="com.vsu.eyesdoctorapp.ui.recommendations.RecommendationsFragment"
+        android:id="@+id/navigation_recommendations_menu"
+        android:name="com.vsu.eyesdoctorapp.ui.recommendations.RecommendationsMenuFragment"
         android:label="Рекомендации"
-        tools:layout="@layout/fragment_recommendations" />
+        tools:layout="@layout/fragment_recommendations_menu" />
 
     <fragment
-        android:id="@+id/navigation_map"
-        android:name="com.vsu.eyesdoctorapp.ui.map.MapFragment"
+        android:id="@+id/navigation_map_menu"
+        android:name="com.vsu.eyesdoctorapp.ui.map.MapMenuFragment"
         android:label="Карта"
-        tools:layout="@layout/fragment_map" />
+        tools:layout="@layout/fragment_map_menu" />
 
     <fragment
-        android:id="@+id/navigation_settings"
-        android:name="com.vsu.eyesdoctorapp.ui.settings.SettingsFragment"
+        android:id="@+id/navigation_settings_menu"
+        android:name="com.vsu.eyesdoctorapp.ui.settings.SettingsMenuFragment"
         android:label="Настройки"
-        tools:layout="@layout/fragment_settings" />
+        tools:layout="@layout/fragment_settings_menu" />
 
 <!--    <fragment-->
 <!--        android:id="@+id/navigation_home"-->
