--- a/app/src/main/res/layout/activity_paired_diagnostics.xml
+++ b/app/src/main/res/layout/activity_paired_diagnostics.xml
@@ -6,16 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.diagnostics.PairedDiagnosticsActivity">
 
+    <Button
+        android:id="@+id/btn_back"
+        style="@style/Widget.MaterialComponents.Button.Icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/btn_box_margin"
+        android:text="На главную"
+        android:visibility="gone"
+        app:icon="@drawable/ic_arrow_left"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ImageView
         android:id="@+id/iv_main_letter"
         android:layout_width="35mm"
         android:layout_height="35mm"
-        app:srcCompat="@drawable/im_letter_sh"
         android:scaleType="fitCenter"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/ll_top"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/ll_top"/>
+        app:srcCompat="@drawable/im_letter_sh" />
 
     <LinearLayout
         android:id="@+id/ll_top"
@@ -32,7 +44,7 @@
             style="?attr/materialButtonOutlinedStyle"
             android:layout_width="@dimen/btn_box_size"
             android:layout_height="@dimen/btn_box_size"
-            android:layout_margin="16dp"
+            android:layout_margin="@dimen/btn_box_margin"
             android:text="Ш" />
 
         <Button
@@ -93,5 +105,40 @@
             android:layout_height="@dimen/btn_box_size"
             android:layout_margin="@dimen/btn_box_margin"
             android:text="И" />
+
+        <Button
+            android:id="@+id/btn_letter_none"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="@dimen/btn_box_size"
+            android:layout_height="@dimen/btn_box_size"
+            android:layout_margin="@dimen/btn_box_margin"
+            android:text="\?" />
+
     </LinearLayout>
+
+    <!--    results-->
+
+    <TextView
+        android:id="@+id/tv_result_percentage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="70%"
+        android:textSize="104sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_result_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Острота зрения правого глаза"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tv_result_percentage" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
