--- a/app/src/main/res/layout/fragment_map_menu.xml
+++ b/app/src/main/res/layout/fragment_map_menu.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.map.MapMenuFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <WebView
+        android:id="@+id/wv_map"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Карта" />
-
+        android:layout_height="match_parent" />
 </FrameLayout>
