--- a/app/src/main/res/layout/fragment_diagnostics_menu.xml
+++ b/app/src/main/res/layout/fragment_diagnostics_menu.xml
@@ -41,79 +41,69 @@
                 android:text="Правый" />
         </LinearLayout>
 
-        <ScrollView
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_left_eye_chart"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="Полезная инфа"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="12dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ll_button_container">
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/ll_button_container"
+            app:layout_constraintBottom_toTopOf="@id/cv_right_eye_chart">
 
-
-            <LinearLayout
-                android:id="@+id/ll_info_container"
+            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_marginTop="2dp"
+                android:text="Левый глазик"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/lc_left"
+                android:layout_width="match_parent"
+                android:layout_height="208dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp" />
+        </androidx.cardview.widget.CardView>
 
-                <TextView
-                    android:id="@+id/textView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Тут что-то будет" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cv_right_eye_chart"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="2"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="10dp"
+            app:cardMaxElevation="12dp"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cv_left_eye_chart"
+            app:layout_constraintBottom_toBottomOf="parent">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:text="Правый глазик"
+                android:textAlignment="center"
+                android:textStyle="bold" />
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:cardElevation="10dp"
-                    app:cardCornerRadius="5dp"
-                    app:cardMaxElevation="12dp"
-                    app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="2"
-                    android:layout_marginBottom="1dp">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Левый глазик"
-                        android:textStyle="bold" android:textAlignment="center" android:layout_marginTop="2dp"/>
-                    <com.github.mikephil.charting.charts.LineChart
-                        android:id="@+id/lc_left"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="208dp"/>
-                </androidx.cardview.widget.CardView>
-
-                <androidx.cardview.widget.CardView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:cardElevation="10dp"
-                    app:cardCornerRadius="5dp"
-                    app:cardMaxElevation="12dp"
-                    app:cardPreventCornerOverlap="true"
-                    app:cardUseCompatPadding="true"
-                    android:layout_marginTop="10dp"
-                    android:layout_weight="2"
-                    android:layout_marginBottom="1dp">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Правый глазик"
-                        android:textStyle="bold" android:textAlignment="center" android:layout_marginTop="2dp"/>
-                    <com.github.mikephil.charting.charts.LineChart
-                        android:id="@+id/lc_right"
-                        android:layout_marginTop="20dp"
-                        android:layout_marginRight="10dp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="208dp"/>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-        </ScrollView>
+            <com.github.mikephil.charting.charts.LineChart
+                android:id="@+id/lc_right"
+                android:layout_width="match_parent"
+                android:layout_height="208dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="10dp" />
+        </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
