--- a/app/src/main/res/layout/activity_single_diagnostics.xml
+++ b/app/src/main/res/layout/activity_single_diagnostics.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:keepScreenOn="true"
     tools:context=".ui.diagnostics.SingleDiagnosticsActivity">
 
 <!--    start-->
@@ -11,7 +12,7 @@
         android:id="@+id/cl_start_timer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="visible">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_start_timer"
@@ -86,7 +87,7 @@
         android:id="@+id/cl_input"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone">
+        android:visibility="visible">
 
 
         <TextView
