--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -26,7 +26,7 @@
 
         <Spinner
             android:id="@+id/spn_choose_letter"
-            android:layout_width="wrap_content"
+            android:layout_width="108dp"
             android:layout_height="match_parent"
             android:layout_margin="@dimen/btn_box_margin"/>
 
